# yo-writer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: agui.py
backend/app/api/v1/: agents.py  conversations.py  sandbox.py  tools.py
backend/app/core/: config.py  constants.py  database.py  errors.py
backend/app/models/: __init__.py  agent.py  sandbox.py  tool.py
backend/app/runtime/: checkpointer.py  engine.py  mcp_gateway.py
backend/app/runtime/graphs/: multi_agent.py  plan_execute.py  react.py  react_hitl.py
backend/app/runtime/sandbox/: config.py  manager.py
backend/app/schemas/: agent.py  conversation.py  sandbox.py  tool.py
backend/app/services/: agent_service.py  conversation_service.py  sandbox_service.py  tool_service.py
backend/migrations/: env.py
backend/migrations/versions/: 084c524a5e1b_initial_empty_migration.py  44744a1a4454_add_agent_core_tables.py  83d7f740ef1c_add_tools_tables.py  8f3e82d3f2db_make_agent_runs_agent_id_cascade.py  d2192aa1e33e_make_agent_runs_conversation_id_nullable.py  d802209ec9d8_add_sandbox_executions_table.py
docs/: PRD.md  PROGRESS.md
docs/phases/: 00-index.md  01-project-scaffold.md  02-agent-core.md  03-agent-chat.md  05-sandbox.md  (+6 more)
frontend/: package-lock.json  package.json
infra/: docker-compose.yml
skills/: consistency-guardian.md  data-engineer.md  literature-mapper.md  paper-architect.md  reviewer-simulator.md  revision-handler.md  section-writer.md  story-polisher.md  submission-ready.md
(+32 files in other folders)
