[project]
name = "yo-agent"
version = "0.1.0"
description = "YoAgent — Agent-as-a-Service Platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
